--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,7 @@
   </style>
   <body>
     <div id="app"></div>
-    <script src="http://webapi.amap.com/maps?v=1.3&key=your_key"></script>
+    <script src="http://webapi.amap.com/maps?v=1.3&key=8a836b5396939a03cc60a99a8f452eb1"></script>
     <script src="./app.js"></script>
   </body>
 </html>
